Images added to gallery

--- a/index.html
+++ b/index.html
@@ -233,8 +233,35 @@
       <div class="spacer">
 
       </div>
+
+
     </div>
 
+
+  </div>
+  <div class="gallery">
+    <div class="row">
+      <div class="column">
+        <img src="images/gallery/1.jpg" />
+        <img src="images/gallery/2.jpg" />
+        <img src="images/gallery/3.jpg" />
+      </div>
+      <div class="column">
+        <img src="images/gallery/4.jpg" />
+        <img src="images/gallery/5.jpg" />
+        <img src="images/gallery/6.jpg" />
+      </div>
+      <div class="column">
+        <img src="images/gallery/7.jpg" />
+        <img src="images/gallery/8.jpg" />
+        <img src="images/gallery/9.jpg" />
+      </div>
+      <div class="column">
+        <img src="images/gallery/7.jpg" />
+        <img src="images/gallery/8.jpg" />
+        <img src="images/gallery/9.jpg" />
+      </div>
+    </div>
   </div>
 </body>
 
