--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-
+  <title>Victoria Ward Beauty Therapy</title>
 
 </head>
 
@@ -77,10 +77,10 @@
 
 
   </div>
-  <div class="prices-container">
+  <div id="treatprice" class="prices-container">
 
     <div class="Prices">
-      <h2 id="treatprice">Treatments and Prices</h2>
+      <h2>Treatments and Prices</h2>
 
       <table>
         <th>
@@ -193,7 +193,7 @@
         </tr>
 
         <th>
-          Massage
+          Massages
         </th>
         <tr>
           <td>
@@ -239,7 +239,7 @@
 
 
   </div>
-  <div class="gallery">
+  <div id="gallery" class="gallery">
     <div class="row">
       <div class="column">
         <img src="images/gallery/1.jpg" />
@@ -263,6 +263,61 @@
       </div>
     </div>
   </div>
+
+  <div id="aboutsec" class="about">
+    <div class="about-title">
+      <ul>
+        <li>
+          <h4>A Little bit about...</h4>
+        </li>
+        <li>
+          <h2>Victoria</h2>
+        </li>
+        <li>
+          <h2>Ward</h2>
+        </li>
+        <li>
+          <h2>Beauty</h2>
+        </li>
+      </ul>
+    </div>
+    <div class="about-text">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at feugiat elit. Nam mauris est, maximus ut dapibus eu, congue vitae enim. Mauris euismod sem a mi consectetur finibus.<br /> Ut sagittis massa a pulvinar malesuada. <br /> Phasellus eu
+      aliquet libero, ac porttitor lorem. Nam sit amet tempor ante.<br /> Fusce mattis tellus vitae nulla porta, a vehicula diam aliquet. <br /> Sed ultricies mauris est, sed ultricies lectus tincidunt in. Phasellus in bibendum magna. <br />Fusce posuere
+      convallis est a ullamcorper. Praesent at volutpat arcu, sit amet mollis augue. <br /> Curabitur interdum id urna ac imperdiet.<br /> Etiam facilisis, libero tincidunt fermentum accumsan, tellus mi suscipit sapien, ut aliquet massa nulla id lacus.
+      Morbi eu ex eget lorem viverra tempus nec in mi.<br /> Nam vitae fermentum felis, et rhoncus sapien. Nullam porttitor erat nec ipsum finibus, a faucibus ipsum ultrices. Curabitur vel vehicula orci.
+    </div>
+  </div>
+  <div id="contactme" class="contact">
+    <h1>Contact</h1>
+    <div class="contact2">
+
+      <div class="map">
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9770.027397064117!2d-1.3997190597697955!3d52.25234051073762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487725385eb5e545%3A0x8fb7cd91dbe5399c!2sSoutham!5e0!3m2!1sen!2suk!4v1573222532868!5m2!1sen!2suk"
+          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      </div>
+      <div class="contact-form">
+
+        <h2>Why not contact me?</h2>
+        <form>
+          <label>Name</label><br />
+          <input class="input-text" type="text" placeholder="Name" /> <br />
+          <label>Email</label><br />
+          <input class="input-text" type="text" placeholder="Email" /><br />
+          <label>Message</label><br />
+          <textarea rows="10" placeholder="" /> </textarea><br />
+          <div class="buttonHolder">
+
+            <input class="submit" type="submit" placeholder="Send" />
+
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+
 </body>
 
 </html>
@@ -290,22 +345,22 @@
       scrollTop: $("#treatprice").offset().top
     }, 'slow');
   });
-  $("#gallery").click(function() {
+  $("#Gallery").click(function() {
 
     $('html, body').animate({
-      scrollTop: $("#homepage").offset().top
+      scrollTop: $("#gallery").offset().top
     }, 'slow');
   });
   $("#about").click(function() {
 
     $('html, body').animate({
-      scrollTop: $("#homepage").offset().top
+      scrollTop: $("#aboutsec").offset().top
     }, 'slow');
   });
   $("#contact").click(function() {
 
     $('html, body').animate({
-      scrollTop: $("#homepage").offset().top
+      scrollTop: $("#contactme").offset().top
     }, 'slow');
   });
 
@@ -316,10 +371,29 @@
     }, 'slow');
   });
 
+
+
   $(function() {
     $(document).scroll(function() {
       var $nav = $(".topnav");
       $nav.toggleClass('scroll', $(this).scrollTop() > $nav.height());
     });
+  });
+
+
+
+
+  $(window).scroll(function() {
+    console.log($(window).scrollTop());
+    var topDivHeight = $("#homepage").height();
+    var viewPortSize = $(window).height();
+
+    var triggerAt = 4300;
+    var triggerHeight = (topDivHeight - viewPortSize) + triggerAt;
+    console.log(triggerHeight);
+    if ($(window).scrollTop() >= triggerHeight) {
+      $('.headtitle ').css('visibility', 'visible').hide().fadeIn(1600);
+      $(this).off('scroll');
+    }
   });
 </script>
