--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       <div class="contact-form">
 
         <h2>Why not contact me?</h2>
-        <form>
+        <form action="http://formspree.io/benmckeown1998@gmail.com">
           <label>Name</label><br />
           <input class="input-text" type="text" placeholder="Name" /> <br />
           <label>Email</label><br />
