Attempted to use formspree again

--- a/index.html
+++ b/index.html
@@ -301,12 +301,10 @@
 
         <h2>Why not contact me?</h2>
         <form action="http://formspree.io/benmckeown1998@gmail.com">
-          <label>Name</label><br />
-          <input class="input-text" type="text" placeholder="Name" /> <br />
           <label>Email</label><br />
-          <input class="input-text" type="text" placeholder="Email" /><br />
+          <input class="input-text" type="text" placeholder="Email" name="_replyto" /><br />
           <label>Message</label><br />
-          <textarea rows="10" placeholder="" /> </textarea><br />
+          <textarea name="body" rows="10" placeholder="" /> </textarea><br />
           <div class="buttonHolder">
 
             <input class="submit" type="submit" placeholder="Send" />
