--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       <div class="contact-form">
 
         <h2>Why not contact me?</h2>
-        <form method="POST" action="http://formspree.io/benmckeown1998@gmail.com">
+        <form action="http://formspree.io/benmckeown1998@gmail.com" method="POST">
           <label>Email</label><br />
           <input class="input-text" type="text" placeholder="Email" name="_replyto" /><br />
           <label>Message</label><br />
