--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
       <div class="contact-form">
 
         <h2>Why not contact me?</h2>
-        <form action="http://formspree.io/benmckeown1998@gmail.com" method="POST">
+        <form action="https://formspree.io/benmckeown1998@gmail.com" method="POST">
           <label>Email</label><br />
-          <input class="input-text" type="text" placeholder="Email" name="_replyto" /><br />
+          <input class="input-text" type="email" placeholder="Email" name="_replyto" /><br />
           <label>Message</label><br />
           <textarea name="body" rows="10" placeholder="" /> </textarea><br />
           <div class="buttonHolder">
